--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				</section>
 				<section class="counter">
 					<div class="counter-content">
-						<span class="counter-content__number" data-value="2000">2000</span>
+						<span class="counter-content__number" data-value="1000">1000</span>
 						<span class="counter-content__caption">Lorem Ipsum</span>
 					</div>
 					<div class="counter-content">
@@ -93,7 +93,7 @@
 						<span class="counter-content__caption">Lorem Ipsum</span>
 					</div>
 					<div class="counter-content">
-						<span class="counter-content__number" data-value="19380">19380</span>
+						<span class="counter-content__number" data-value="346">346</span>
 						<span class="counter-content__caption">Lorem Ipsum</span>
 					</div>
 					<div class="counter-content">
@@ -114,6 +114,6 @@
 		</div>
 	</footer>
 	<script src="js/jquery-3.4.1.js"></script>
-	<script src="js/script.js"></script>
+	<script type="module" src="js/script.js"></script>
 </body>
 </html>
